[package]
name = "punch-web"
version = "0.1.0"
authors = ["David Simmons <simmons@davidsimmons.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/simmons/punch"
keywords = ["time", "web" ]
description = """
Punch is a minimally viable time tracking web app.  Very minimally viable.
"""
readme = "README.md"


[dependencies]
actix = "0.7"
actix-web = "0.7"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "^1.3.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "^1.3.0"
r2d2 = "0.8"
dotenv = "0.10"
clap = "2.32"
log = "0.4"
failure = "0.1"
failure_derive = "0.1"
bcrypt = "^0.2.0"
askama = "0.7"
rand = "0.5"
chrono = "0.4"
diesel-derive-enum = { version = "0.4", features = ["sqlite"] }

[build-dependencies]
askama = "0.7"
